--- a/UpMyCoin/Main/Cell/CoinListCell.xib
+++ b/UpMyCoin/Main/Cell/CoinListCell.xib
@@ -9,31 +9,78 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CoinListCell" id="KGk-i7-Jjw" customClass="CoinListCell" customModule="UpMyCoin" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CoinListCell" rowHeight="54" id="KGk-i7-Jjw" customClass="CoinListCell" customModule="UpMyCoin" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIj-1e-dcG">
-                        <rect key="frame" x="16" y="11.5" width="288" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ggm-KZ-Tsa">
+                        <rect key="frame" x="16" y="8" width="288" height="38"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="nUg-VS-nv8">
+                                <rect key="frame" x="0.0" y="0.0" width="59" height="38"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="753" text="비트코인" lineBreakMode="characterWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oIj-1e-dcG">
+                                        <rect key="frame" x="0.0" y="0.0" width="59" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="90" id="jJL-SM-eUB"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BTC/KRW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrz-Js-f1O">
+                                        <rect key="frame" x="0.0" y="27" width="59" height="11"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="11" id="xaM-rs-bOd"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="64647257" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6N0-q1-Sxr">
+                                <rect key="frame" x="59" y="0.0" width="108.5" height="38"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="전일대비" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yc1-xI-OSO">
+                                <rect key="frame" x="167.5" y="0.0" width="55.5" height="38"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="거래대금" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmi-tO-RLe">
+                                <rect key="frame" x="223" y="0.0" width="65" height="38"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="65" id="ohV-oV-mcI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="oIj-1e-dcG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mE4-uM-egS"/>
-                    <constraint firstAttribute="trailing" secondItem="oIj-1e-dcG" secondAttribute="trailing" constant="16" id="p8r-4P-bA5"/>
-                    <constraint firstItem="oIj-1e-dcG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="sZ2-ag-bWl"/>
+                    <constraint firstAttribute="trailing" secondItem="Ggm-KZ-Tsa" secondAttribute="trailing" constant="16" id="6t2-CU-Rvp"/>
+                    <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="Ggm-KZ-Tsa" secondAttribute="bottom" constant="8" id="Bld-8P-XxQ"/>
+                    <constraint firstItem="Ggm-KZ-Tsa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="gVg-BZ-s0E"/>
+                    <constraint firstItem="Ggm-KZ-Tsa" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vbZ-C1-Pq0"/>
+                    <constraint firstItem="Ggm-KZ-Tsa" firstAttribute="top" relation="lessThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="vcA-kv-5uS"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="coinPriceLabel" destination="6N0-q1-Sxr" id="RRG-X2-bca"/>
                 <outlet property="koreanNameLabel" destination="oIj-1e-dcG" id="mHU-2b-gyg"/>
+                <outlet property="marketLabel" destination="yrz-Js-f1O" id="gZv-np-nra"/>
             </connections>
-            <point key="canvasLocation" x="35" y="132"/>
+            <point key="canvasLocation" x="34.782608695652179" y="133.25892857142856"/>
         </tableViewCell>
     </objects>
 </document>
